# WASA-Simulations

./: .gitignore  README.md
config/: al4cosy0_mc_009.dat042.m4  al4cosy0_mc_010.dat042.m4  apply_geometry.sh  mkalig.sh
config/B009/: FHD1  FRA1  FRH1  FRI1  FVH1  wmc.m4
config/B010/: MDX2  VCF1
pluto/basic-reactions/: CMakeLists.txt
pluto/basic-reactions/include/: ReactionSimulation.h  reaction_generator.h
pluto/basic-reactions/src/: ReactionSimulation.cpp  main.cpp  reaction_generator.cpp
pluto/bound_pdpi0/: eventgenerator.C
pluto/generator/: eventgenerator.C  rootlogon.C
pluto/quasifree/: CMakeLists.txt
pluto/quasifree/FermiMomDistr/distr_gen/: ParisDistribution.cpp
pluto/quasifree/include/: GINFile.hh  constants.h  data_writer.h  event_generator.h  file_reader.h  library_manager.h  momentum_data_loader.h  physics_calculator.h  random_generator.h
pluto/quasifree/momentum_distributions/: cdbonn_momentum_distribution.txt  paris_momentum_distribution.txt
pluto/quasifree/src/: GINFile.cxx  data_writer.cpp  event_generator.cpp  file_reader.cpp  library_manager.cpp  main.cpp  momentum_data_loader.cpp  physics_calculator..cpp  physics_calculator.cpp
pluto/tmp/: eventgenerator.C
pluto/tmp/FermiMomDistr/: DrawHisto.cpp
pluto/tmp/FermiMomDistr/distr_gen/: CDBonnDistribution.cpp  ParisDistribution.cpp
pluto/tmp/ProtonVariables/: example.txt
wmc/: runWMC.sh  wmc_run.sh
wmc/WMC/: loadBank.C  wasa_hits.setup  wmc.dat.m4  wmc.sh
wmc/run/: clean.sh  evd.C  loadBank.C  mdc.C  mdcshow.C  wasa_draw.setup  wasa_view.setup  wmc.sh
